--- a/public/locales/am/translation.json
+++ b/public/locales/am/translation.json
@@ -19,5 +19,8 @@
   "mondayToSaturday": "Երկուշաբթի-Շաբաթ",
   "workingHours": "Աշխատանքային ժամեր",
   "choose": "Ընտրեք համապատասխան դաշտը՝ ընթացիկ պարամետրերը ընտրելու համար",
-  "spare":"Պահեստամասեր"
+  "spare": "Պահեստամասեր",
+  "contactUsResponse": "Մենք ստացել ենք ձեր հարցը/մեկնաբանությունը/խնդիրը, մենք ձեզ հետ կկապվենք 24 ժամվա ընթացքում !",
+  "config": "Ձեր կոնֆիգուրացիան",
+  "orderResponse": "Մենք ստացել ենք ձեր պատվերի կոնֆիգուրացիան, մենք ձեզ հետ կկապվենք 24 ժամվա ընթացքում:"
 }
