--- a/public/locales/ge/translation.json
+++ b/public/locales/ge/translation.json
@@ -19,5 +19,8 @@
   "mondayToSaturday": "ორშაბათი-შაბათი",
   "workingHours": "სამუშაო საათები",
   "choose": "აირჩიეთ შესაბამისი ველი მიმდინარე პარამეტრების არჩევის გასაგრძელებლად",
-  "spare": "გამოხმაურება"
+  "spare": "გამოხმაურება",
+  "contactUsResponse": "ჩვენ მივიღეთ თქვენი შეკითხვა/კომენტარი/პრობლემა, დაგიკავშირდებით 24 საათის განმავლობაში !",
+  "config": "თქვენი კონფიგურაცია",
+  "orderResponse":"ჩვენ მივიღეთ თქვენი შეკვეთის კონფიგურაცია, დაგიკავშირდებით 24 საათის განმავლობაში!"
 }
