--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -19,5 +19,8 @@
   "mondayToSaturday": "Понедельник-Суббота",
   "workingHours": "Рабочие часы",
   "choose": "Выбирайте подходящие поле чтобы продолжать выбирать нынешние параметры",
-  "spare": "Запчасти"
+  "spare": "Запчасти",
+  "contactUsResponse": "Мы получили ваш вопрос/комментарий/проблему, в течении 24 часа мы свяжемся с вами !",
+  "config": "Ваша конфигурация",
+  "orderResponse": "Мы получили вашу конфигурацию заказа, в течении 24 часа мы свяжемся с вами !"
 }
