--- a/public/locales/am/translation.json
+++ b/public/locales/am/translation.json
@@ -22,5 +22,6 @@
   "spare": "Պահեստամասեր",
   "contactUsResponse": "Մենք ստացել ենք ձեր հարցը/մեկնաբանությունը/խնդիրը, մենք ձեզ հետ կկապվենք 24 ժամվա ընթացքում !",
   "config": "Ձեր կոնֆիգուրացիան",
-  "orderResponse": "Մենք ստացել ենք ձեր պատվերի կոնֆիգուրացիան, մենք ձեզ հետ կկապվենք 24 ժամվա ընթացքում:"
+  "orderResponse": "Մենք ստացել ենք ձեր պատվերի կոնֆիգուրացիան, մենք ձեզ հետ կկապվենք 24 ժամվա ընթացքում:",
+  "gallery":"Պատկերասրահ"
 }
