--- a/public/locales/ge/translation.json
+++ b/public/locales/ge/translation.json
@@ -22,5 +22,6 @@
   "spare": "გამოხმაურება",
   "contactUsResponse": "ჩვენ მივიღეთ თქვენი შეკითხვა/კომენტარი/პრობლემა, დაგიკავშირდებით 24 საათის განმავლობაში !",
   "config": "თქვენი კონფიგურაცია",
-  "orderResponse":"ჩვენ მივიღეთ თქვენი შეკვეთის კონფიგურაცია, დაგიკავშირდებით 24 საათის განმავლობაში!"
+  "orderResponse":"ჩვენ მივიღეთ თქვენი შეკვეთის კონფიგურაცია, დაგიკავშირდებით 24 საათის განმავლობაში!",
+  "gallery":"გალერეა"
 }
