--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -22,5 +22,6 @@
   "spare": "Запчасти",
   "contactUsResponse": "Мы получили ваш вопрос/комментарий/проблему, в течении 24 часа мы свяжемся с вами !",
   "config": "Ваша конфигурация",
-  "orderResponse": "Мы получили вашу конфигурацию заказа, в течении 24 часа мы свяжемся с вами !"
+  "orderResponse": "Мы получили вашу конфигурацию заказа, в течении 24 часа мы свяжемся с вами !",
+  "gallery":"Галерея"
 }
