--- a/public/locales/am/translation.json
+++ b/public/locales/am/translation.json
@@ -23,5 +23,6 @@
   "contactUsResponse": "Մենք ստացել ենք ձեր հարցը/մեկնաբանությունը/խնդիրը, մենք ձեզ հետ կկապվենք 24 ժամվա ընթացքում !",
   "config": "Ձեր կոնֆիգուրացիան",
   "orderResponse": "Մենք ստացել ենք ձեր պատվերի կոնֆիգուրացիան, մենք ձեզ հետ կկապվենք 24 ժամվա ընթացքում:",
-  "gallery":"Պատկերասրահ"
+  "gallery":"Պատկերասրահ",
+  "partners":"Մեր Գործընկերները"
 }
