--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,5 +23,6 @@
   "contactUsResponse": "We have received your question/comment/problem, we will contact you within 24 hours !",
   "config": "Your configuration",
   "orderResponse": "We received your order, we will contact you within 24 hours!",
-  "gallery":"Gallery"
+  "gallery":"Gallery",
+  "partners":"Our Partners"
 }
