--- a/public/locales/ge/translation.json
+++ b/public/locales/ge/translation.json
@@ -23,5 +23,6 @@
   "contactUsResponse": "ჩვენ მივიღეთ თქვენი შეკითხვა/კომენტარი/პრობლემა, დაგიკავშირდებით 24 საათის განმავლობაში !",
   "config": "თქვენი კონფიგურაცია",
   "orderResponse":"ჩვენ მივიღეთ თქვენი შეკვეთის კონფიგურაცია, დაგიკავშირდებით 24 საათის განმავლობაში!",
-  "gallery":"გალერეა"
+  "gallery":"გალერეა",
+  "partners":"ჩვენი პარტნიორები"
 }
