update bank ante chips

--- a/public/locales/am/translation.json
+++ b/public/locales/am/translation.json
@@ -23,6 +23,8 @@
   "contactUsResponse": "Մենք ստացել ենք ձեր հարցը/մեկնաբանությունը/խնդիրը, մենք ձեզ հետ կկապվենք 24 ժամվա ընթացքում !",
   "config": "Ձեր կոնֆիգուրացիան",
   "orderResponse": "Մենք ստացել ենք ձեր պատվերի կոնֆիգուրացիան, մենք ձեզ հետ կկապվենք 24 ժամվա ընթացքում:",
-  "gallery":"Պատկերասրահ",
-  "partners":"Մեր Գործընկերները"
+  "gallery": "Պատկերասրահ",
+  "partners": "Մեր Գործընկերները",
+  "home": "Գլխավոր",
+  "toConstructor": "Գնալ դեպի կոնստրուկտոր"
 }
