--- a/public/locales/ge/translation.json
+++ b/public/locales/ge/translation.json
@@ -24,5 +24,7 @@
   "config": "თქვენი კონფიგურაცია",
   "orderResponse":"ჩვენ მივიღეთ თქვენი შეკვეთის კონფიგურაცია, დაგიკავშირდებით 24 საათის განმავლობაში!",
   "gallery":"გალერეა",
-  "partners":"ჩვენი პარტნიორები"
+  "partners":"ჩვენი პარტნიორები",
+  "home":"საწყისი გვერდი",
+  "toConstructor":"გადადით კონსტრუქტორზე"
 }
