--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -23,6 +23,8 @@
   "contactUsResponse": "Мы получили ваш вопрос/комментарий/проблему, в течении 24 часа мы свяжемся с вами !",
   "config": "Ваша конфигурация",
   "orderResponse": "Мы получили вашу конфигурацию заказа, в течении 24 часа мы свяжемся с вами !",
-  "gallery":"Галерея",
-  "partners":"Наши партнеры"
+  "gallery": "Галерея",
+  "partners": "Наши партнеры",
+  "home": "Главная",
+  "toConstructor":"Перейти в конструктор"
 }
